samples/_failures_safe/1761486272_6a1062_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9b4c2ad6.c: In function ‘main’:
./samples/SAFE/__tmp_9b4c2ad6.c:182:9: error: expected declaration or statement at end of input
  182 |         fprintf(stderr, "Failed to tokenize input\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_9b4c2ad6.c:182:9: error: expected declaration or statement at end of input
